UserAuthType: return early for USER_AUTH_TYPE_NONE